--- a/apm-sniffer/apm-sdk-plugin/lizhi-dc-0.4.x-plugin/pom.xml
+++ b/apm-sniffer/apm-sdk-plugin/lizhi-dc-0.4.x-plugin/pom.xml
@@ -23,7 +23,13 @@
     <dependency>
       <groupId>fm.lizhi</groupId>
       <artifactId>lz-datastore</artifactId>
-      <version>1.3.9-SNAPSHOT</version>
+      <version>1.4.0-SNAPSHOT</version>
+      <scope>provided</scope>
+    </dependency>
+    <dependency>
+      <groupId>fm.lizhi</groupId>
+      <artifactId>lz-app-commons-conn</artifactId>
+      <version>2.3.1</version>
       <scope>provided</scope>
     </dependency>
     <dependency>
