config for dev environment

--- a/apm-sniffer/config/agent.config
+++ b/apm-sniffer/config/agent.config
@@ -56,4 +56,4 @@ collector.servers=192.168.6.67:10800,192.168.6.74:10800
 # collector.direct_servers=www.skywalking.service.io
 
 # Logging level
-logging.level=DEBUG
+logging.level=INFO
